[project]
name = "langchain-dev-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "tiebingice", email = "1206345694@qq.com" }]
requires-python = ">=3.11"
dependencies = ["langchain>=0.3.27", "langgraph>=0.6.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
test = [
    "langchain-qwq>=0.2.1",
    "langchain-siliconflow>=0.1.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
